cloud-components/kustomize/readinglist/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readinglist
  name: readinglist
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: readinglist
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: readinglist
    spec:
      containers:
      - image: registry.localhost:5000/readinglist:v0.0.1
        imagePullPolicy: IfNotPresent
        name: readinglist
        ports:
        - containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
