cloud-components/kustomize/readinglist/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: readinglist
  name: readinglist
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: readinglist
